# kobo-notes-exporter

./: .gitignore  AGENTS.md  CODEOWNERS  LICENSE  README.md  pyproject.toml
docs/superpowers/plans/: 2026-07-17-export-pr-shortcut.md
docs/superpowers/specs/: 2026-07-17-export-pr-shortcut-design.md
scripts/: export_to_notes_repo.sh
src/kobo_notes_exporter/: cli.py  export_pr.py
tests/: test_export_pr.py  test_output_dir_behavior.py
